src/test/resources/validation/warning/unknownNodeTable/schema.graphqls
type Query {
    rom(bygningskode: String!): Rom
}

type Rom @table(name: "ROMSKIP") {
    id: ID!
    kode: ID!
    navn: String!
    bygningskode: String!
}
