src/test/resources/error/resolverReturningInterfaceIllegalArguments/schema.graphqls
type Query {
  kull(navn: String!): Kull
}

type Kull @node {
  id: ID!
  navn: String! @column(name: "STUDIEKULLNAVN")
  referertNode: Node @resolver #field returning interface should have exactly one argument
}

type ProgramStudierett @node(table: "STUDIERETT") {
  id: ID!
  navn: String!
}

